# zasshi-app

./: .env  .gitignore  Quickstart.md  To_Do.md  docker-compose.yml  pyproject.toml  z_requirements.txt
backend/: Dockerfile  requirements.txt
backend/src/: alembic.ini
backend/src/Zapi/: QuickStart.md  main.py  main_api.py  requirements.txt
backend/src/Zapi/Docs/: MVP plan.md  NOTES.md  ToDo.md  aiohttp vs httpx.md
backend/src/Zapi/dev/: data_loader.py  data_path.py
backend/src/Zapi/feed/: clean.py  parse_feed.py  parser.py  profile_feed.py
backend/src/Zapi/feed_finder/: feedfinder.py  ksamuel_feeds.py  simple_feed_finder.py
backend/src/Zapi/fetch/: article.py  async_fetcher.py  channels.py  fetch_feeds.py  fetch_rss.py  section.py
backend/src/Zapi/test/: test_foo.py
backend/src/Zapi/wip/: asyncio_solution.py  fetch_multiple_urls_w_aiohttp.py  use_asyncio_aiohttp_w_fastapi.py
backend/src/Zapi/zdb/: ChannelLoader.py  dump_db.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 1b8eb8f7ee8e_create_user_model.py
backend/src/data_model/: __init__.py  country.py  models.py  users.py
backend/src/pgadmin/: servers.json
frontend/: Dockerfile  Quickstart.md  README.md  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: Navigation.vue  Stats.vue  TodoList.vue
frontend/src/components/3Panes/: 3PanelContainer.vue  AccordianChannels.vue  ArticleCard.vue  FeedPane.vue  LeftContainerPanel.vue  LeftNavAccordian.vue  LeftPane.vue  SectionFeedList.vue
frontend/src/components/v0/: LeftNavBar.vue  SourceList.vue  TopNavBar.vue
frontend/src/components/v1/: ArticleCard.vue  ArticleImgCard.vue  ArticleList.vue  LeftNavAccordian.vue  LeftNavBar.vue  SourceList.vue
frontend/src/components/v2/: 3PanelContainer.vue  ArticleCard_v2.vue  ArticlePane.vue  ChannelView.vue  FeedPane.vue  LeftContainerPanel.vue  LeftNavAccordian.vue  LeftP_no2.vue  LeftPane.vue  LeftPane2.vue  LeftPane3.vue  LeftPanel.vue  SectionFeedList.vue  SectionList.vue  SectionView.vue  Settings.vue
frontend/src/components/wip/: Comp1.vue  Comp2.vue  Comp3.vue  LPChannels.vue
frontend/src/router/: index.js
frontend/src/rssapi/: api.js
frontend/src/stores/: articleStore.js  componentStore.js  feedStore.js  rssStore.js  settingsStore.js
frontend/src/views/: About.vue  App_v1.vue  App_v2.vue  Home.vue  HomeView.vue  SettingsView.vue  Todos.vue
