[tool.poetry]
name = "zasshi"
version = "0.1.0"
description = ""
authors = ["Craig Hagerman <craighagerman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
aiosignal = "^1.3.1"
alembic = "^1.11.2"
anyio = "^3.7.1"
appnope = "^0.1.3"
async-timeout = "^4.0.2"
attrs = "^23.1.0"
beautifulsoup4 = "^4.12.2"
black = "^23.7.0"
cookiecutter = "^2.3.0"
cssselect = "^1.2.0"
decorator = "^5.1.1"
distlib = "^0.3.7"
fastapi = "^0.101.0"
fastjsonschema = "^2.18.0"
feedfinder2 = "^0.0.4"
feedparser = "^6.0.10"
frozenlist = "^1.4.0"
html5lib = "^1.1"
httpcore = "^0.17.3"
httpx = "^0.24.1"
ipykernel = "^6.25.0"
ipython = "^8.14.0"
ipython-genutils = "^0.2.0"
ipywidgets = "^8.1.0"
jinja2 = "^3.1.2"
jsonschema = "^4.18.6"
jupyter = "^1.0.0"
jupyter-client = "^8.3.0"
jupyter-console = "^6.6.3"
jupyter-contrib-core = "^0.4.2"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-core = "^5.3.1"
jupyter-highlight-selected-word = "^0.2.0"
jupyter-latex-envs = "^1.4.6"
jupyter-nbextensions-configurator = "^0.6.3"
jupyterlab-pygments = "^0.2.2"
jupyterlab-widgets = "^3.0.8"
lxml = "^4.9.3"
marshmallow = "^3.20.1"
marshmallow-sqlalchemy = "^0.29.0"
matplotlib-inline = "^0.1.6"
mistune = "^3.0.1"
more-itertools = "^10.1.0"
msgpack = "^1.0.5"
multidict = "^6.0.4"
mypy-extensions = "^1.0.0"
nbclient = "^0.8.0"
nbconvert = "^7.7.3"
nbformat = "^5.9.2"
nest-asyncio = "^1.5.7"
newspaper3k = "^0.2.8"
nltk = "^3.8.1"
notebook = "^7.0.2"
numpy = "^1.25.2"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
pathspec = "^0.11.2"
pip-chill = "^1.0.3"
pipe = "^2.0"
pkginfo = "^1.9.6"
platformdirs = "^3.10.0"
pluggy = "^1.2.0"
poetry = "^1.5.1"
poetry-core = "^1.6.1"
poetry-plugin-export = "^1.4.0"
prometheus-client = "^0.17.1"
prompt-toolkit = "^3.0.39"
psutil = "^5.9.5"
psycopg2 = "^2.9.7"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pycparser = "^2.21"
pydantic = "^2.1.1"
pygments = "^2.15.1"
pyparsing = "^3.1.1"
pyproject-hooks = "^1.0.0"
pyrsistent = "^0.19.3"
pytest = "^7.4.0"
pytz = "^2023.3"
pyyaml = "^6.0.1"
pyzmq = "^25.1.0"
regex = "^2023.6.3"
requests = "^2.31.0"
six = "^1.16.0"
sqlalchemy = "^2.0.19"
tomli = "^2.0.1"
tomlkit = "^0.12.1"
tqdm = "^4.65.0"
traitlets = "^5.9.0"
typing-extensions = "^4.7.1"
tzdata = "^2023.3"
uvicorn = "^0.23.2"
virtualenv = "^20.24.2"
wcwidth = "^0.2.6"
webencodings = "^0.5.1"
werkzeug = "^2.3.6"
widgetsnbextension = "^4.0.8"
xattr = "^0.10.1"
xmltodict = "^0.13.0"
yarl = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
